# cookiecutter-django-rest-project

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .dockerignore  Dockerfile  NOTICE  README.md  docker-compose.labels.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.proxy.yml  docker-compose.yml  manage.py  pyproject.toml
{{cookiecutter.project_slug}}/docs/: README.md  conf.py
{{cookiecutter.project_slug}}/docs/dev/: index.rst
{{cookiecutter.project_slug}}/docs/sysadmin/: index.rst
{{cookiecutter.project_slug}}/scripts/: README.md
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py  __main__.py  asgi.py  settings.py  urls.py  wsgi.py
